# django-fsm-ticket

./: .gitignore  CONTRIBUTING.md  README.md  makemigrations.py  pyproject.toml  runtests.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
django_fsm_ticket/: admin.py  api.py  apps.py  base_views.py  decorators.py  filters.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
django_fsm_ticket/locale/it/LC_MESSAGES/: django.mo  django.po
django_fsm_ticket/migrations/: 0001_initial.py  0002_alter_ticketupdate_ts.py  0003_alter_ticket_polymorphic_ctype_and_more.py  0004_attachmentticketupdate_deleteattachmentticketupdate.py  0005_auto_20250310_1235.py  0006_alter_attachmentticketupdate_options_and_more.py  0007_remove_attachmentticketupdate_uuid_ticket_uuid_and_more.py  0008_auto_20260331_0820.py  0009_auto_20260331_0820.py
django_fsm_ticket/templates/django_fsm_ticket/: action.html  notification.txt  notificationupdate.txt  reminder.txt  ticket.html  ticketcreate.html  ticketlist.html
django_fsm_ticket/templates/django_fsm_ticket/partials/: attachment_tu_fields.html  delete_attachment_tu_fields.html  icon.html  ticket_content.html  ticket_content_fields.html  ticketupdate.html  ticketupdate_fields.html
django_fsm_ticket/templatetags/: django_fsm_ticket.py
docs/: TUTORIAL.md
example_project/example_project/: settings.py  urls.py
example_project/purchase/: models.py
example_project/purchase/migrations/: 0001_initial.py  0002_orderticketupdate.py  0003_purchaseticket_amount.py
example_project/purchase/templates/: base.html
example_project/purchase/templates/purchase/partials/: orderticketupdate_fields.html  ticket_content_fields.html
example_project/purchase/templates/registration/: login.html  password_change_form.html
tests/: forms.py  models.py  test_api.py  test_views.py
tests/migrations/: 0001_initial.py
tests/templates/: base.html
